refactor: reduce distribution file size